--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Komachi",
   "license": "MIT",
   "dependencies": {
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "uuid": "^3.2.1"
   }
 }
